--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@ include ':app'
 setBinding(new Binding([gradle: this]))
 evaluate(new File(
   settingsDir.parentFile,
-  '../flutterHybrid/flutterHost/flutter_lib/.android/include_flutter.groovy'
+  './flutterHost/flutter_lib/.android/include_flutter.groovy'
 ))
